# papers-geodesics-of-care

./: .gitignore  README.md  audit.md  brief.md  metadata.yaml  research.md  review-2026-06-18.md  sources.md
paper/: PAPER.md
simulation/: README.md  analyses.py  figures.py  pyproject.toml  run_all.py
simulation/output/: results.json
